# zuri

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
lib/zuri_distributor/: CMakeLists.txt
lib/zuri_distributor/src/: dependency_selector.cpp  dependency_set.cpp  distribution_loader.cpp  distributor_result.cpp  environment_database.cpp  http_package_resolver.cpp  package_cache.cpp  package_cache_database.cpp  package_cache_loader.cpp  package_config.cpp  package_database.cpp  package_fetcher.cpp  package_requirements_loader.cpp  package_store.cpp  packages_lock.cpp  runtime.cpp  runtime_environment.cpp  static_package_resolver.cpp  tiered_package_cache.cpp  version_interval_map.cpp
lib/zuri_distributor/test/: CMakeLists.txt  dependency_selector_tests.cpp  dependency_set_tests.cpp  environment_database_tests.cpp  http_package_resolver_tests.cpp  package_cache_tests.cpp  package_database_tests.cpp  package_fetcher_tests.cpp  test_http_server.cpp  test_http_server.h
lib/zuri_packager/: CMakeLists.txt
lib/zuri_packager/share/: RequirementLexer.g4  RequirementParser.g4  manifest.fbs
lib/zuri_packager/src/: entry_path.cpp  entry_walker.cpp  manifest_attr.cpp  manifest_attr_parser.cpp  manifest_attr_writer.cpp  manifest_entry.cpp  manifest_namespace.cpp  manifest_state.cpp  manifest_walker.cpp  package_attrs.cpp  package_dependency.cpp  package_extractor.cpp  package_reader.cpp  package_reader_loader.cpp  package_requirement.cpp  package_result.cpp  package_specifier.cpp  package_types.cpp  package_writer.cpp  packager_result.cpp  packaging_conversions.cpp  requirement_parser.cpp  zuri_manifest.cpp
lib/zuri_packager/test/: CMakeLists.txt  package_dependency_tests.cpp  package_extractor_tests.cpp  package_loader_tests.cpp  package_reader_tests.cpp  package_requirement_tests.cpp  package_specifier_tests.cpp  package_writer_tests.cpp  requirement_parser_tests.cpp
lib/zuri_test/: CMakeLists.txt
lib/zuri_test/src/: placeholder_loader.cpp  zuri_tester.cpp
lib/zuri_tooling/: CMakeLists.txt
lib/zuri_tooling/src/: build_graph.cpp  build_tool_config.cpp  core_config.cpp  distribution.cpp  environment.cpp  environment_config.cpp  home.cpp  import_store.cpp  logging_config.cpp  package_manager.cpp  package_store.cpp  project.cpp  project_config.cpp  repository_store.cpp  resolver_config.cpp  target_store.cpp  tooling_conversions.cpp  tooling_result.cpp  zuri_config.cpp  zuri_workspace.cpp
lib/zuri_tooling/test/: CMakeLists.txt  build_graph_tests.cpp  target_cycle_detector_tests.cpp
pkg/dev.zuri/: CMakeLists.txt  project.config.in
pkg/dev.zuri/plugins/: CMakeLists.txt
pkg/dev.zuri/test/: CMakeLists.txt  lib_dir_paths.h.in  test_utils.cpp  test_utils.h
pkg/dev.zuri_fs/: CMakeLists.txt  workspace.config.in
pkg/dev.zuri_fs/plugin/: CMakeLists.txt
pkg/dev.zuri_fs/src/: access.ly  file.ly  path.ly  permission.ly
pkg/dev.zuri_fs/test/: CMakeLists.txt  access_tests.cpp  path_tests.cpp  permission_tests.cpp
pkg/dev.zuri_std/: CMakeLists.txt  LICENSE.txt  tester.config.in  workspace.config.in
pkg/dev.zuri_std/collections/: CMakeLists.txt  lib_config.h.in
pkg/dev.zuri_std/log/: CMakeLists.txt  lib_config.h.in
pkg/dev.zuri_std/plugin/: CMakeLists.txt
pkg/dev.zuri_std/src/: collections.ly  flags.ly  log.ly  process.ly  system.ly  text.ly  time.ly
pkg/dev.zuri_std/system/: CMakeLists.txt
pkg/dev.zuri_std/test/: CMakeLists.txt  datetime_tests.cpp  flags_tests.cpp  future_tests.cpp  hashmap_tests.cpp  instant_tests.cpp  log_tests.cpp  option_tests.cpp  port_tests.cpp  process_tests.cpp  queue_tests.cpp  system_tests.cpp  text_tests.cpp  time_tests.cpp  timezone_tests.cpp  treemap_tests.cpp  treeset_tests.cpp  vector_tests.cpp  work_queue_tests.cpp
pkg/dev.zuri_std/text/: CMakeLists.txt  workspace.config
pkg/dev.zuri_std/time/: CMakeLists.txt  lib_config.h.in
resources/: CMakeLists.txt
resources/config/: zuri-build.config.in  zuri.config.in
share/config/: CMakeLists.txt  zuri-build.config.in  zuri.config.in
zuri/: CMakeLists.txt
zuri/include/zuri/: ephemeral_session.h  load_config.h  read_eval_print_loop.h  zuri.h
zuri/src/: ephemeral_session.cpp  load_config.cpp  read_eval_print_loop.cpp  zuri.cpp
zuri_std/: CMakeLists.txt
zuri_std/collections/: CMakeLists.txt
zuri_std/collections/assembly/: compile_hashmap.cpp  compile_option.cpp  compile_option.h  compile_treemap.cpp  compile_treemap.h  compile_treeset.cpp  compile_treeset.h  compile_treeset_iterator.cpp  compile_vector.cpp  compile_vector.h  compile_vector_iterator.cpp  compile_vector_iterator.h  lib_builder.cpp
zuri_std/collections/plugin/: hashmap_key.h  hashmap_ref.cpp  hashmap_ref.h  hashmap_traps.cpp  hashmap_traps.h  native_collections.cpp  option_ref.cpp  option_ref.h  treemap_ref.cpp  treemap_traps.cpp  treeset_ref.cpp  treeset_ref.h  treeset_traps.cpp  treeset_traps.h  vector_ref.cpp  vector_ref.h  vector_traps.cpp  vector_traps.h
zuri_std/collections/test/: CMakeLists.txt  hashmap_tests.cpp  option_tests.cpp  treemap_tests.cpp  treeset_tests.cpp  vector_tests.cpp
zuri_std/log/assembly/: compile_log.cpp  lib_builder.cpp
zuri_std/log/plugin/: log_traps.cpp  native_log.cpp
zuri_std/log/test/: CMakeLists.txt  log_tests.cpp
zuri_std/system/: lib_config.h.in
zuri_std/system/assembly/: compile_attr.cpp  compile_attr.h  compile_element.cpp  compile_future.cpp  compile_future.h  compile_operation.cpp  compile_operation.h  compile_port.cpp  compile_port.h  compile_queue.cpp  compile_queue.h  compile_system.cpp  compile_system.h  lib_builder.cpp
zuri_std/system/plugin/: attr_ref.cpp  attr_ref.h  element_ref.cpp  element_ref.h  future_ref.cpp  future_ref.h  native_system.cpp  native_system.h  port_ref.cpp  port_ref.h  queue_ref.cpp  queue_ref.h  system_traps.cpp  system_traps.h
zuri_std/system/test/: CMakeLists.txt  attr_tests.cpp  element_tests.cpp  operation_tests.cpp  port_tests.cpp  queue_tests.cpp  system_tests.cpp
zuri_std/text/: CMakeLists.txt  lib_config.h.in
zuri_std/text/assembly/: compile_text.cpp  compile_text.h
zuri_std/text/plugin/: native_text.cpp  (+2 more)
(+366 files in other folders)
